# openRuyi

./: .pre-commit-config.yaml  README.md  REUSE.toml  _manifest
.github/workflows/: build.yaml  pre-commit.yml
SPECS/Catch2/: Catch2.spec
SPECS/abseil-cpp/: abseil-cpp.spec
SPECS/acl/: acl.spec
SPECS/alsa-lib/: alsa-lib.spec
SPECS/angelscript/: angelscript.spec
SPECS/apr/: 2000-Skip-testsock-test.patch  apr.spec
SPECS/argon2/: argon2.spec
SPECS/arrow/: 0001-use-system-mimalloc-shared-library.patch  arrow.spec
SPECS/asn1c/: asn1c.spec
SPECS/atf/: atf.spec
SPECS/attr/: 0002-dont-skip-security.evm-when-copy-xattr.patch  attr.spec
SPECS/audit/: audit.spec
SPECS/authselect/: authselect.spec
SPECS/autoconf/: autoconf.spec
SPECS/autoconf-archive/: autoconf-archive.spec
SPECS/autofs/: autofs.spec
SPECS/automake/: automake.spec
SPECS/bash/: 0001-bash-5.3-patch-1.patch  0002-bash-5.3-patch-2.patch  0003-bash-5.3-patch-3.patch  bash.spec  dot.bashrc
SPECS/bash-completion/: bash-completion.spec  macros.bash-completion
SPECS/bc/: bc.spec
SPECS/bdftopcf/: bdftopcf.spec
SPECS/beakerlib/: beakerlib.spec
SPECS/bindfs/: bindfs.spec
SPECS/binutils/: binutils.spec
SPECS/bison/: bison.spec
SPECS/blake3/: blake3.spec
SPECS/blktests/: blktests.spec
SPECS/bluez/: bluez.spec
SPECS/boost/: 0001-boost-1.81.0-build-optflags.patch  0002-boost-1.78.0-no-rpath.patch  0003-boost-1.78.0-b2-build-flags.patch  boost.spec
SPECS/boringssl/: Fix-install-cmake-prefix-path.patch  boringssl.spec
SPECS/brotli/: brotli.spec
SPECS/btrbk/: btrbk.logrotate  btrbk.spec
SPECS/python-pydantic-core/: Cargo.toml  python-pydantic-core.spec
(+1640 files in other folders)
