[package]
name = "pydantic-core"
version = "2.41.5"
edition = "2021"
license = "MIT"
homepage = "https://github.com/pydantic/pydantic-core"
repository = "https://github.com/pydantic/pydantic-core.git"
readme = "README.md"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/build.rs",
    "/rust-toolchain",
    "/src",
    "/python/pydantic_core",
    "/tests",
    "/.cargo",
    "!__pycache__",
    "!tests/.hypothesis",
    "!tests/.pytest_cache",
    "!*.so",
]
rust-version = "1.75"

[dependencies]
pyo3 = { version = "0.26", features = ["generate-import-lib", "num-bigint", "py-clone"] }
regex = "1.12.2"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
enum_dispatch = "0.3.13"
serde = { version = "1.0.219", features = ["derive"] }
speedate = "0.17.0"
smallvec = "1.15.1"
ahash = "0.8.12"
url = "2.5.4"
idna = "1.1.0"
base64 = "0.22.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
uuid = "1.18.1"
jiter = { version = "0.11.1", features = ["python"] }
hex = "0.4.3"
percent-encoding = "2.3.2"

[lib]
name = "_pydantic_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

[profile.profiling]
inherits = "release"
debug = true
strip = false

[dev-dependencies]
pyo3 = { version = "0.26", features = ["auto-initialize"] }

[build-dependencies]
version_check = "0.9.5"
pyo3-build-config = { version = "0.26" }
